# sequanto-automation

./: .editorconfig  BranchTypesMachineAutomationFiles.md  BranchTypesMachineAutomationMemory.md  BranchTypesMachineAutomationMouse.md  BranchTypesMachineAutomationProcess.md  BranchTypesMachineAutomationRoot.md  BranchTypesMachineAutomationServer.md  BranchTypesMachineAutomationSidebar.md  BranchTypesMachineAutomationWindows.md  BranchTypesUi.md  BranchTypesUiButton.md  BranchTypesUiCheckBox.md  BranchTypesUiComboBox.md  BranchTypesUiCommonBase.md  BranchTypesUiDebugging.md  BranchTypesUiLabel.md  BranchTypesUiList.md  BranchTypesUiMenuItem.md  BranchTypesUiMouse.md  BranchTypesUiRadioButton.md  BranchTypesUiRoot.md  BranchTypesUiScreen.md  BranchTypesUiSidebar.md  BranchTypesUiSlider.md  BranchTypesUiTable.md  BranchTypesUiTabs.md  BranchTypesUiTextBox.md  BranchTypesUiTypes.md  BranchTypesUiWidget.md  BranchTypesUiWindow.md  CMakeLists.txt  COPYING  Compiling.md  CompilingOnWinAvr.md  Doxyfile.in  GeneratorOverview.md  Philosophy.md  ProjectHome.md  Protocol.md  ProtocolRevision1.md  (+3 more)
arduino/: CMakeLists.txt  Wire.cpp
arduino/libraries/SequantoAutomation/: SequantoAutomation.cpp  keywords.txt
arduino/tools/SequantoAutomationTool/src/: SequantoAutomationTool.java
generator/: CMakeLists.txt  generate_automation_defines.py  generate_ui_files.py
generator/code/c/: automation_functions.c
generator/lib/sequanto_automation/: codeparser.py
generator/lib/sequanto_automation/codeparsers/: c.py
server/: CMakeLists.txt
server/c/: CMakeLists.txt
server/c/applications/: CMakeLists.txt
server/c/applications/acme_ventilator/: CMakeLists.txt  acme_ventilator.automation  acme_ventilator.h  clock.c  display.cxx  main.c  temperature.c  ventilator.c
server/c/applications/arduino_demo/: CMakeLists.txt  arduino_demo.automation  clock.cpp  clock.h  main.cpp
server/c/applications/arduino_io/: CMakeLists.txt  arduino_io.automation  main.c
server/c/applications/labview_automation/: CMakeLists.txt  labview.automation
server/c/applications/light_dimmer/: CMakeLists.txt  DimmerStateMachine.cxx  InterfaceStateMachine.cxx  InterfaceStateMachine.h  display.cxx  light_dimmer.automation  main.cxx
server/c/applications/machine_automation/: CMakeLists.txt  QtApplicationMachineAutomationEventFilter.cxx  QtApplicationMachineAutomationEventFilter.h  QtMachineAutomationEvent.cxx  QtMachineAutomationEvent.h  common.h  files.c  machine.automation  main.c  memory.c  mouse.c  mouse_x11.c  process.c  process_linux.c  process_win32.c  server.c  windows.c  windows_atspi2.c  windows_capture_screen_x11.c  windows_cspi1.0.c  windows_qt.cxx  windows_win32_oleacc.c
server/c/examples/: CMakeLists.txt  arduino_test.automation  arduino_test.c  liab_test.automation  liab_test.c  test_server.automation  test_server.c  type_tests.c
server/c/examples/test_server_disabled/: CMakeLists.txt
server/c/include/sequanto/: automation.h  circularbuffer.h  log.h  macros.h  parser.h  protocol.h  server.h  stream.h  system.h  thread.h  types.h  ui.h  value.h
server/c/src/: config.h.in  mutex.c  protocol.c  server.c  sq_automation.c  sq_circularbuffer.c  sq_log.c  sq_mutex.c  sq_parser.c  sq_protocol.c  sq_server.c  sq_stream_arduino.c  sq_stream_embedded_serial.c  sq_stream_tcp.c  sq_stream_unit_test.c  sq_system.c  sq_thread.c  sq_types.c  sq_ui.c  sq_value.c  thread.c  ui.c  value.c
server/c/tests/: CMakeLists.txt  main.c  sequanto_test.h  test_parser.c  test_protocol.c  test_server.c  test_value.c  test_values_parse.c
server/c/tests/performance/: serial_port_using_test_server.py
server/cxx/examples/: CMakeLists.txt  cxx_example.automation  cxx_example.cpp
server/cxx/include/sequanto/: constantnode.h  listnode.h  lock.h  methodinfo.h  mutex.h  node.h  nodeinfo.h  propertynode.h  readonlypropertynode.h  readwritepropertynode.h  tree.h
server/cxx/src/: constantnode.cxx  cxx_root.cpp  cxx_root.h  listnode.cxx  mutex.cxx  node.cxx  nodeinfo.cxx  propertynode.cxx  readonlypropertynode.cxx  tree.cxx
server/qt/: CMakeLists.txt
server/qt/examples/: CMakeLists.txt
server/qt/examples/qt_add_widget_test/: CMakeLists.txt  add_widget_test.automation  add_widget_test.cpp
server/qt/examples/qt_automation/: mainwin.cpp  mainwin.h  mainwin.ui  qt_automation.cpp  qt_machine_automation.cpp
server/qt/examples/qt_position_test/: CMakeLists.txt  postestwin.cpp  postestwin.h  (+1 more)
server/qt/src/: QtActiveWindowProperty.cxx  QtApplicationAutomationEventFilter.cxx  QtAutoGeneratedNameProperty.cxx  QtAutomationChildAddedEvent.cxx  QtAutomationGetPropertyEvent.cxx  QtAutomationMouseClickEvent.cxx  QtAutomationMouseMoveEvent.cxx  QtAutomationRefreshWindowsEvent.cxx  QtCache.cxx  QtCachedProperty.cxx  QtColorProperty.cxx  QtDebugging.cxx  QtGlobalPositionProperty.cxx  QtListLineHeightMethod.cxx  QtListLineTextMethod.cxx  QtListLinesProperty.cxx  QtMethod2Parameters.cxx  QtMouseClickMethod.cxx  QtMouseMoveMethod.cxx  QtMoveMethod.cxx  QtPropertyChangedNotificationAdapter.cxx  QtResizeMethod.cxx  QtScreenPositionProperty.cxx  QtScrollBarProperty.cxx  QtStatsProperties.cxx  QtStringProperty.cxx  QtTableCellTextMethod.cxx  QtTableColumnHeaderMethod.cxx  QtTableColumnWidthMethod.cxx  QtTableColumnsProperty.cxx  QtTableRowHeaderMethod.cxx  QtTableRowHeightMethod.cxx  QtTableRowsProperty.cxx  QtTabsActiveTabProperty.cxx  QtTabsTabNameMethod.cxx  QtTabsTabPositionProperty.cxx  QtTabsTabWidthMethod.cxx  QtUiTypeProperty.cxx  QtUnnamedObjectStore.cxx  QtUpdateCacheEvent.cxx  (+7 more)
server/shared/: CMakeLists.txt  main.cpp
trunk/: CMakeLists.txt  Doxyfile  Doxyfile.in  build_win_releases.py  configure.sh  test_qmake_build.py  unittest-build.py
trunk/arduino/: CMakeLists.txt  Wire.cpp
trunk/cmake/: CMakeAvr.cmake
trunk/emacs/: sequanto-automation-mode.el
trunk/generator/: CMakeLists.txt  generate_automation_defines.py
trunk/generator/tests/: main.py
trunk/server/: CMakeLists.txt
trunk/server/c/: CMakeLists.txt
trunk/server/cxx/: CMakeLists.txt
trunk/server/qt/: CMakeLists.txt
trunk/server/shared/: CMakeLists.txt  main.cpp
(+409 files in other folders)
