SET(SQ_ALL_SRCS CACHE INTERNAL "All source files" FORCE)

ADD_SUBDIRECTORY(c)

IF(SQ_QT4)
  IF(SQ_QT_MACHINE_AUTOMATION)
    ADD_SUBDIRECTORY(qt/examples)
  ELSE(SQ_QT_MACHINE_AUTOMATION)
    ADD_SUBDIRECTORY(cxx)
    ADD_SUBDIRECTORY(qt)
  ENDIF(SQ_QT_MACHINE_AUTOMATION)
ENDIF(SQ_QT4)

IF(SQ_BUILD_SHARED_LIBRARIES)
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/server/c/include)

  IF(SQ_QT4)
    IF(SQ_QT_MACHINE_AUTOMATION)
    ELSE(SQ_QT_MACHINE_AUTOMATION)
      INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/server/cxx/include)
      INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/server/qt/include)
    ENDIF(SQ_QT_MACHINE_AUTOMATION)
  ENDIF(SQ_QT4)
  
  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/generated)
  
  IF(SQ_QT4)
    IF(SQ_QT_MACHINE_AUTOMATION)
    ELSE(SQ_QT_MACHINE_AUTOMATION)
      QT4_WRAP_CPP(SequantoAutomation_SHARED_APPLICATION_AUTOMATION_EVENT_FILTER_MOC qt/include/sequanto/QtApplicationAutomationEventFilter.h)
      QT4_WRAP_CPP(SequantoAutomation_SHARED_WIDGET_AUTOMATION_EVENT_FILTER_MOC qt/include/sequanto/QtWidgetAutomationEventFilter.h)
      QT4_WRAP_CPP(SequantoAutomation_SHARED_PROPERTY_CHANGED_NOTIFICATION_ADAPTER_MOC qt/include/sequanto/QtPropertyChangedNotificationAdapter.h)
    ENDIF(SQ_QT_MACHINE_AUTOMATION)
  ENDIF(SQ_QT4)
  
  IF(SQ_QT4)
    IF(SQ_QT_MACHINE_AUTOMATION)
    ELSE(SQ_QT_MACHINE_AUTOMATION)
      ADD_LIBRARY(SequantoAutomation_SHARED ${SequantoAutomation_SHARED_APPLICATION_AUTOMATION_EVENT_FILTER_MOC}
        ${SequantoAutomation_SHARED_WIDGET_AUTOMATION_EVENT_FILTER_MOC}
        ${SequantoAutomation_SHARED_PROPERTY_CHANGED_NOTIFICATION_ADAPTER_MOC})
    ENDIF(SQ_QT_MACHINE_AUTOMATION)
  ELSE(SQ_QT4)
    ADD_LIBRARY(SequantoAutomation_SHARED SHARED ${SQ_ALL_SRCS})
  ENDIF(SQ_QT4)
  
  SET_SOURCE_FILES_PROPERTIES(${SQ_ALL_SRCS} PROPERTIES COMPILE_FLAGS
    "-DSQ_SEQUANTO_AUTOMATION_SHARED -DSQ_SEQUANTO_AUTOMATION_SOURCE")
  
  IF(WIN32)
    TARGET_LINK_LIBRARIES(SequantoAutomation_SHARED WS2_32)
  ENDIF(WIN32)
  
  IF(QT4_FOUND)
    INCLUDE(${QT_USE_FILE})
    
    TARGET_LINK_LIBRARIES(SequantoAutomation_SHARED ${QT_LIBRARIES})
  ENDIF(QT4_FOUND)

  IF(SQ_INSTALL_BINARY)
    INSTALL(TARGETS SequantoAutomation_SHARED
      RUNTIME DESTINATION bin
      LIBRARY DESTINATION lib
      ARCHIVE DESTINATION lib)
  ENDIF(SQ_INSTALL_BINARY)

  ADD_SUBDIRECTORY(shared)
ENDIF(SQ_BUILD_SHARED_LIBRARIES)
